k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lotus-deployment
  labels:
    app: lotus-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lotus-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: lotus-app
    spec:
      containers:
        - name: lotus-app
          image: emptyparam/lotus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
