k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lotus-service
spec:
  type: ClusterIP
  selector:
    app: lotus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
